Fix ethers.js CDN URL - use jsDelivr instead of cdn.ethers.io
- cdn.ethers.io was failing with ERR_NAME_NOT_RESOLVED
- Switch to https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js
- jsDelivr is more reliable and widely used

--- a/skills/moltiverse-zoo/ui/index.html
+++ b/skills/moltiverse-zoo/ui/index.html
@@ -6,7 +6,7 @@
     <title>Moltiverse Zoo Command Center</title>
     <!-- Ethers.js for Web3 wallet connection -->
     <script
-      src="https://cdn.ethers.io/lib/ethers-5.7.2.umd.min.js"
+      src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js"
       type="application/javascript"
     ></script>
     <style>
